--- a/matching-game.html
+++ b/matching-game.html
@@ -37,7 +37,7 @@
         function generateFaces() {
             for (let i = 0; i < numberOfFaces; i++) {
                 let face = document.createElement('img');
-                face.src = '../images/smile.png';
+                face.src = 'smile.png';
                 let randomTop = Math.floor((Math.random() * 400) + 1);
                 let randomLeft = Math.floor((Math.random() * 400) + 1);
                 face.style.top = randomTop + 'px';
