--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Matching Game</title>
-    <style>
-        img {
-            position: absolute;
-        }
-
-        div {
-            position: absolute;
-            width: 500px;
-            height: 500px;
-        }
-
-        #rightSide {
-            left: 500px;
-            border-left: 1px solid;
-        }
-    </style>
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body onload="generateFaces()">
@@ -28,51 +13,7 @@
         on the additional face to reach the next level!</p>
     <div id="leftSide"></div>
     <div id="rightSide"></div>
-
-    <script>
-        let numberOfFaces = 5;
-        const theLeftSide = document.querySelector('#leftSide');
-        const theRightSide = document.querySelector('#rightSide');
-
-        function generateFaces() {
-            for (let i = 0; i < numberOfFaces; i++) {
-                let face = document.createElement('img');
-                face.src = 'smile.png';
-                let randomTop = Math.floor((Math.random() * 400) + 1);
-                let randomLeft = Math.floor((Math.random() * 400) + 1);
-                face.style.top = randomTop + 'px';
-                face.style.left = randomLeft + 'px';
-                theLeftSide.appendChild(face);
-            }
-
-            const leftSideImages = theLeftSide.cloneNode(true);
-            leftSideImages.removeChild(leftSideImages.lastChild);
-            theRightSide.appendChild(leftSideImages);
-
-            theLeftSide.lastChild.addEventListener('click', nextLevel);
-            document.body.addEventListener('click', gameOver);
-        }
-
-        function nextLevel(event) {
-            event.stopPropagation();
-            numberOfFaces += 5;
-
-            while (theLeftSide.firstChild) {
-                theLeftSide.removeChild(theLeftSide.firstChild);
-            }
-            while (theRightSide.firstChild) {
-                theRightSide.removeChild(theRightSide.firstChild);
-            }
-            generateFaces();
-        }
-
-        function gameOver() {
-            alert('Game Over!');
-            document.body.removeEventListener('click', gameOver);
-            leftSideImages.lastChild.removeEventListener('click', nextLevel);
-        }
-    </script>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
